--- a/kildin.html
+++ b/kildin.html
@@ -4,8 +4,8 @@
 
   <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>Онежское озеро. Кижи</title>
-    <meta name="keywords" content="Андрей Коперский, фотоальбом, Онежское озеро, поход на байдарках, ">
+    <title>Кильдин (план)</title>
+    <meta name="keywords" content="Андрей Коперский, фотоальбом, Кильдин, Баренцево море, ">
     <link type="text/css" rel="stylesheet" href="stylesheets/screen_styles.css">
     <link type="text/css" media="screen" rel="stylesheet" href="stylesheets/colorbox.css">
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -22,13 +22,13 @@
 			  });
 		  </script>
     <script type="text/javascript" src="arrays/ltocent2.js"></script>
-    <script type="text/JavaScript">window.pageid = "onega.html";</script>
+    <script type="text/JavaScript">window.pageid = "kildin.html";</script>
     <link rel="Shortcut Icon" type="image/ico" href="images/favicon.ico">
   </head>
 
 
 
-  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="onega">
+  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="kildin">
     <div id="container">
       <div id="branding">
         <h1>
@@ -89,24 +89,24 @@
       </div>
       <div id="content_main" class="with-info">
         <div id="breadcrumbs">
-          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Онежское озеро</strong>
+          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Кильдин (план)</strong>
           </p>
         </div>
-        <h1 class="title topictitle1">Онежское озеро. Кижи</h1>
+        <h1 class="title topictitle1">Кильдин (план)</h1>
         <div class="body photoBody">
-          <p class="shortdesc">Поход по Онежскому озеру с 1 по 10 мая 2014 г.</p>
+          <p class="shortdesc">Планируемый поход на о. Кильдин в Баренцевом море.</p>
           <div class="section storySection">
             <center>
-              <iframe width="100%" height="300px" frameBorder="0" src="http://umap.openstreetmap.fr/en/map/onega_9534?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=false&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;datalayersControl=false&amp;onLoadPanel=undefined"></iframe>
+              <iframe width="100%" height="300px" frameBorder="0" src="http://umap.openstreetmap.fr/en/map/kildin_9843?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=false&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;datalayersControl=false&amp;onLoadPanel=undefined"></iframe>
               <br>
-              <a target="_blank" href="http://umap.openstreetmap.fr/en/map/onega_9534">
+              <a target="_blank" href="http://umap.openstreetmap.fr/en/map/kildin_9843">
                 Смотреть карту во весь экран</a>
             </center></div></div>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
                                 var disqus_shortname = "teux",
-                                    disqus_identifier = "onega",
-                                    disqus_url = "http://www.teux.ru/onega.html";
+                                    disqus_identifier = "kildin",
+                                    disqus_url = "http://www.teux.ru/kildin.html";
                                 (function() {
                                 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
                                 dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
@@ -119,13 +119,10 @@
         <ul id="quick_links"></ul>
         <h3>Language Links</h3>
         <ul id="inner_navigation">
-          <li class="first">
-            <strong>Вперед:</strong>
-            <a href="ladoga.html">Ладожское озеро</a>
-          </li>
+          <li class="first"><strong>Вперед:</strong>нет</li>
           <li>
             <strong>Назад:</strong>
-            <a href="mossea14.html">Московское море</a>
+            <a href="ladoga14.html">Ладога (план)</a>
           </li>
           <li class="last">
             <strong>Вверх:</strong>
