--- a/ladoga14.html
+++ b/ladoga14.html
@@ -97,7 +97,7 @@
           <p class="shortdesc">Планируемый поход по Ладожскому озеру с 7 по 15 июня 2014 г.</p>
           <div class="section storySection">
             <center>
-              <iframe width="100%" height="300px" frameBorder="0" src="http://umap.openstreetmap.fr/en/map/ladoga_9375?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=true&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;datalayersControl=false&amp;onLoadPanel=undefined"></iframe>
+              <iframe width="100%" height="300px" frameBorder="0" src="http://umap.openstreetmap.fr/en/map/ladoga_9375?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=false&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;datalayersControl=false&amp;onLoadPanel=undefined"></iframe>
               <br>
               <a target="_blank" href="http://umap.openstreetmap.fr/en/map/ladoga_9375">
                 Смотреть карту во весь экран</a>
@@ -119,7 +119,10 @@
         <ul id="quick_links"></ul>
         <h3>Language Links</h3>
         <ul id="inner_navigation">
-          <li class="first"><strong>Вперед:</strong>нет</li>
+          <li class="first">
+            <strong>Вперед:</strong>
+            <a href="kildin.html">Кильдин (план)</a>
+          </li>
           <li>
             <strong>Назад:</strong>
             <a href="ladoga.html">Ладожское озеро</a>
