--- a/river.html
+++ b/river.html
@@ -195,7 +195,11 @@
             <li class="link ulchildlink"><strong>
                 <a href="ladoga14.html">Ладожское озеро (план)</a>
               </strong><br>
-Планируемый поход по Ладожскому озеру с 7 по 15 июня 2014 г.</li></ul></div></div>
+Планируемый поход по Ладожскому озеру с 7 по 15 июня 2014 г.</li>
+            <li class="link ulchildlink"><strong>
+                <a href="kildin.html">Кильдин (план)</a>
+              </strong><br>
+Планируемый поход на о. Кильдин в Баренцевом море.</li></ul></div></div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
