--- a/ladoga14.html
+++ b/ladoga14.html
@@ -4,7 +4,7 @@
 
   <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>Ладожское озеро (план)</title>
+    <title>Ладожское озеро</title>
     <meta name="keywords" content="Андрей Коперский, фотоальбом, Ладожское озеро, поход на байдарках, ">
     <link type="text/css" rel="stylesheet" href="stylesheets/screen_styles.css">
     <link type="text/css" media="screen" rel="stylesheet" href="stylesheets/colorbox.css">
@@ -92,10 +92,11 @@
           <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Ладога (план)</strong>
           </p>
         </div>
-        <h1 class="title topictitle1">Ладожское озеро (план)</h1>
+        <h1 class="title topictitle1">Ладожское озеро</h1>
         <div class="body photoBody">
-          <p class="shortdesc">Планируемый поход по Ладожскому озеру с 7 по 15 июня 2014 г.</p>
+          <p class="shortdesc">Поход по Ладожскому озеру с 7 по 15 июня 2014 г. </p>
           <div class="section storySection">
+            <p class="p">Пройдено 222 км от Кузнечного на западном берегу до Олонца на восточном берегу.</p>
             <center>
               <iframe width="100%" height="300px" frameBorder="0" src="http://umap.openstreetmap.fr/en/map/ladoga_9375?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=false&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;datalayersControl=false&amp;onLoadPanel=undefined"></iframe>
               <br>
