--- a/river.html
+++ b/river.html
@@ -193,9 +193,9 @@
               </strong><br>
 Поход по Ладожскому озеру с 7 по 9 мая 2012 г.</li>
             <li class="link ulchildlink"><strong>
-                <a href="ladoga14.html">Ладожское озеро (план)</a>
+                <a href="ladoga14.html">Ладожское озеро</a>
               </strong><br>
-Планируемый поход по Ладожскому озеру с 7 по 15 июня 2014 г.</li>
+Поход по Ладожскому озеру с 7 по 15 июня 2014 г. </li>
             <li class="link ulchildlink"><strong>
                 <a href="kildin.html">Кильдин (план)</a>
               </strong><br>
