--- a/kildin.html
+++ b/kildin.html
@@ -122,7 +122,7 @@
           <li class="first"><strong>Вперед:</strong>нет</li>
           <li>
             <strong>Назад:</strong>
-            <a href="ladoga14.html">Ладога (план)</a>
+            <a href="ladoga14.html">Ладога '14</a>
           </li>
           <li class="last">
             <strong>Вверх:</strong>
