--- a/ladoga14.html
+++ b/ladoga14.html
@@ -89,7 +89,7 @@
       </div>
       <div id="content_main" class="with-info">
         <div id="breadcrumbs">
-          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Ладога (план)</strong>
+          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Ладога '14</strong>
           </p>
         </div>
         <h1 class="title topictitle1">Ладожское озеро</h1>
@@ -126,7 +126,7 @@
           </li>
           <li>
             <strong>Назад:</strong>
-            <a href="ladoga.html">Ладожское озеро</a>
+            <a href="ladoga.html">Ладога '12</a>
           </li>
           <li class="last">
             <strong>Вверх:</strong>
