--- a/whitesea2010.photo.html
+++ b/whitesea2010.photo.html
@@ -28,7 +28,7 @@
 
 
 
-  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="id108DH0E305X">
+  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="whitesea2010.photo">
     <div id="container">
       <div id="branding">
         <h1>
