--- a/kildin.html
+++ b/kildin.html
@@ -4,7 +4,7 @@
 
   <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>Кильдин (план)</title>
+    <title>Кильдин</title>
     <meta name="keywords" content="Андрей Коперский, фотоальбом, Кильдин, Баренцево море, ">
     <link type="text/css" rel="stylesheet" href="stylesheets/screen_styles.css">
     <link type="text/css" media="screen" rel="stylesheet" href="stylesheets/colorbox.css">
@@ -21,7 +21,7 @@
 				  $("a[rel='slideshow']").colorbox({slideshow:"true", slideshowAuto:"true", slideshowSpeed:"4000", slideshowStart:"Начать показ", slideshowStop:"Остановить показ", current:"фото {current} из {total}", width:"70%"});
 			  });
 		  </script>
-    <script type="text/javascript" src="arrays/ltocent2.js"></script>
+    <script type="text/javascript" src="arrays/ltocent3.js"></script>
     <script type="text/JavaScript">window.pageid = "kildin.html";</script>
     <link rel="Shortcut Icon" type="image/ico" href="images/favicon.ico">
   </head>
@@ -42,10 +42,10 @@
           <li class="first">
             <a href="index.html">Походы</a>
           </li>
-          <li class="current">
+          <li>
             <a href="river.html" onmouseover="dropdownmenu(this, event, menu2ent , '')" onmouseout="delayhidemenu()">Водные</a>
           </li>
-          <li>
+          <li class="current">
             <a href="kola.html" onmouseover="dropdownmenu(this, event, menu3ent , '')" onmouseout="delayhidemenu()">Кольский п-ов</a>
           </li>
           <li>
@@ -89,12 +89,12 @@
       </div>
       <div id="content_main" class="with-info">
         <div id="breadcrumbs">
-          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Кильдин (план)</strong>
+          <p><span>Расположение: </span><a href="kola.html">Кольский п-ов</a> &gt; <strong>Кильдин</strong>
           </p>
         </div>
-        <h1 class="title topictitle1">Кильдин (план)</h1>
+        <h1 class="title topictitle1">Кильдин</h1>
         <div class="body photoBody">
-          <p class="shortdesc">Планируемый поход на о. Кильдин в Баренцевом море.</p>
+          <p class="shortdesc">Поход по Баренцеву морю на о. Кильдин с 4 по 10 августа 2014 г.</p>
           <div class="section storySection">
             <center>
               <iframe width="100%" height="300px" frameBorder="0" src="http://umap.openstreetmap.fr/en/map/kildin_9843?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=false&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;datalayersControl=false&amp;onLoadPanel=undefined"></iframe>
@@ -122,11 +122,11 @@
           <li class="first"><strong>Вперед:</strong>нет</li>
           <li>
             <strong>Назад:</strong>
-            <a href="ladoga14.html">Ладога '14</a>
+            <a href="kola2013.html">Восточная Лица</a>
           </li>
           <li class="last">
             <strong>Вверх:</strong>
-            <a href="river.html">Водные</a>
+            <a href="kola.html">Кольский п-ов</a>
           </li>
         </ul>
       </div>
