--- a/kola2013.html
+++ b/kola2013.html
@@ -213,7 +213,10 @@
         <ul id="quick_links"></ul>
         <h3>Language Links</h3>
         <ul id="inner_navigation">
-          <li class="first"><strong>Вперед:</strong>нет</li>
+          <li class="first">
+            <strong>Вперед:</strong>
+            <a href="kildin.html">Кильдин</a>
+          </li>
           <li>
             <strong>Назад:</strong>
             <a href="kola2012.html">Йоканьга</a>
