--- a/ladoga.html
+++ b/ladoga.html
@@ -89,7 +89,7 @@
       </div>
       <div id="content_main" class="with-info">
         <div id="breadcrumbs">
-          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Ладога '12</strong>
+          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Ладога 2012</strong>
           </p>
         </div>
         <h1 class="title topictitle1">Ладожское озеро. Валаам</h1>
@@ -126,7 +126,7 @@
         <ul id="inner_navigation">
           <li class="first">
             <strong>Вперед:</strong>
-            <a href="ladoga14.html">Ладога '14</a>
+            <a href="ladoga14.html">Ладога 2014</a>
           </li>
           <li>
             <strong>Назад:</strong>
