--- a/ladoga14.html
+++ b/ladoga14.html
@@ -89,7 +89,7 @@
       </div>
       <div id="content_main" class="with-info">
         <div id="breadcrumbs">
-          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Ладога '14</strong>
+          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Ладога 2014</strong>
           </p>
         </div>
         <h1 class="title topictitle1">Ладожское озеро</h1>
@@ -120,13 +120,10 @@
         <ul id="quick_links"></ul>
         <h3>Language Links</h3>
         <ul id="inner_navigation">
-          <li class="first">
-            <strong>Вперед:</strong>
-            <a href="kildin.html">Кильдин (план)</a>
-          </li>
+          <li class="first"><strong>Вперед:</strong>нет</li>
           <li>
             <strong>Назад:</strong>
-            <a href="ladoga.html">Ладога '12</a>
+            <a href="ladoga.html">Ладога 2012</a>
           </li>
           <li class="last">
             <strong>Вверх:</strong>
