--- a/onega.html
+++ b/onega.html
@@ -121,7 +121,7 @@
         <ul id="inner_navigation">
           <li class="first">
             <strong>Вперед:</strong>
-            <a href="ladoga.html">Ладога '12</a>
+            <a href="ladoga.html">Ладога 2012</a>
           </li>
           <li>
             <strong>Назад:</strong>
