--- a/kola.html
+++ b/kola.html
@@ -119,7 +119,11 @@
             <li class="link ulchildlink"><strong>
                 <a href="kildin.html">Кильдин</a>
               </strong><br>
-Поход по Баренцеву морю на о. Кильдин с 4 по 10 августа 2014 г.</li></ul></nav>
+Поход по Баренцеву морю на о. Кильдин с 4 по 10 августа 2014 г.</li>
+            <li class="link ulchildlink"><strong>
+                <a href="rybachiy.html">Рыбачий (план)</a>
+              </strong><br>
+Планируемый поход вокруг полуострова Рыбачий, Мурманская обл.</li></ul></nav>
       </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
