--- a/rybachiy.html
+++ b/rybachiy.html
@@ -4,8 +4,8 @@
 
   <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>Кильдин</title>
-    <meta name="keywords" content="Андрей Коперский, фотоальбом, Кильдин, Баренцево море, ">
+    <title>Рыбачий (план)</title>
+    <meta name="keywords" content="Андрей Коперский, фотоальбом, Рыбачий, Баренцево море, ">
     <link type="text/css" rel="stylesheet" href="stylesheets/screen_styles.css">
     <link type="text/css" media="screen" rel="stylesheet" href="stylesheets/colorbox.css">
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -22,13 +22,13 @@
 			  });
 		  </script>
     <script type="text/javascript" src="arrays/ltocent3.js"></script>
-    <script type="text/JavaScript">window.pageid = "kildin.html";</script>
+    <script type="text/JavaScript">window.pageid = "rybachiy.html";</script>
     <link rel="Shortcut Icon" type="image/ico" href="images/favicon.ico">
   </head>
 
 
 
-  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="kildin">
+  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="rybachiy">
     <div id="container">
       <div id="branding">
         <h1>
@@ -89,24 +89,50 @@
       </div>
       <div id="content_main" class="with-info">
         <div id="breadcrumbs">
-          <p><span>Расположение: </span><a href="kola.html">Кольский п-ов</a> &gt; <strong>Кильдин</strong>
+          <p><span>Расположение: </span><a href="kola.html">Кольский п-ов</a> &gt; <strong>Рыбачий</strong>
           </p>
         </div>
-        <h1 class="title topictitle1" id="ariaid-title1">Кильдин</h1>
+        <h1 class="title topictitle1" id="ariaid-title1">Рыбачий (план)</h1>
         <div class="body photoBody">
-          <p class="shortdesc">Поход по Баренцеву морю на о. Кильдин с 4 по 10 августа 2014 г.</p>
+          <p class="shortdesc">Планируемый поход вокруг полуострова Рыбачий, Мурманская обл.</p>
           <section class="section storySection">
-            <center>
-              <iframe width="100%" height="300px" frameBorder="0" src="http://umap.openstreetmap.fr/en/map/kildin_9843?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=false&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;datalayersControl=false&amp;onLoadPanel=undefined"></iframe>
-              <br>
-              <a target="_blank" href="http://umap.openstreetmap.fr/en/map/kildin_9843">
-                Смотреть карту во весь экран</a>
-            </center></section></div>
+            <h2 class="title sectiontitle">Общая информация</h2>
+            <ul class="ul">
+              <li class="li">Конец июля, начало августа - "бархатный сезон".</li>
+              <li class="li">16 дней включая дорогу до Мурманска и обратно.</li>
+              <li class="li">150 км. </li>
+              <li class="li">Байдарки с емкостями непотопляемости (4.5 км/ч - крейсерская скорость).</li>
+              <li class="li">Сложность средняя. Хотя бы у одного в экипаже желателен опыт походов по морю.</li>
+              <li class="li">Опасность выше средней: холодное море, скалы, низкая плотность населения. Максимальная удаленность от берега - 500 м. </li>
+              <li class="li">Опасные звери: медведь, росомаха (обычно не представляют угрозы для человека).</li>
+              <li class="li">Тундровая растительность - в основном мхи, трава, редкий кустарник, нет лесов.</li>
+              <li class="li">Аварийные выходы: грунтовые дороги.</li>
+              <li class="li">Режим уведомительный. Погранзона отсутствует, разрешение не требуется.</li>
+              <li class="li">Занятия на маршруте: морская и речная рыбалка, сбор грибов-ягод, осмотр природных достопримечательностей, геокешинг. </li></ul></section>
+          <section class="section storySection">
+            <h2 class="title sectiontitle">Заброска и выброска</h2>
+            <p class="p">Из Мурманска до полуострова на заказном микроавтобусе. По ценам прошлого года трансфер   в одну сторону составлял 11 тыс. руб. В этом году надо ждать не меньше 15 тыс. руб.</p>
+            <p class="p">Оптимальное количество участников - 10-11 чел.  Трансфер в обе стороны получится ориентировочно 3 тыс на чел. Стоимость раскладки на человека - 4-5 тыс. руб. Стоимость плацкарта Москва-Мурманск от 3200 до 4700 руб. </p></section>
+          <section class="section storySection">
+            <div class="parallax js-module" data-module="Parallax" data-slowdown="true">
+              <div class="parallax--scroll-container">
+                <img class="parallax--bg-image" src="http://img-fotki.yandex.ru/get/15558/101174408.a/0_a893d_74495c29_orig">
+              </div>
+              <a class="parallax--link" href="http://umap.openstreetmap.fr/en/map/rybachiy_25937" target="_blank">
+                <div class="parallax--content">
+                  <span class="parallax--shortdesc ">август 2015</span>
+                  <span class="parallax--title ">Рыбачий</span>
+                  <span class="parallax--note ">план похода</span>
+                </div>
+              </a>
+            </div>
+            <p class="p"></p></section>
+          <section class="section storySection"></section></div>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
                                 var disqus_shortname = "teux",
-                                    disqus_identifier = "kildin",
-                                    disqus_url = "http://www.teux.ru/kildin.html";
+                                    disqus_identifier = "rybachiy",
+                                    disqus_url = "http://www.teux.ru/rybachiy.html";
                                 (function() {
                                 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
                                 dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
@@ -119,13 +145,10 @@
         <ul id="quick_links"></ul>
         <h3>Language Links</h3>
         <ul id="inner_navigation">
-          <li class="first">
-            <strong>Вперед:</strong>
-            <a href="rybachiy.html">Рыбачий</a>
-          </li>
+          <li class="first"><strong>Вперед:</strong>нет</li>
           <li>
             <strong>Назад:</strong>
-            <a href="kola2013.html">Восточная Лица</a>
+            <a href="kildin.html">Кильдин</a>
           </li>
           <li class="last">
             <strong>Вверх:</strong>
