--- a/ladoga15.html
+++ b/ladoga15.html
@@ -4,8 +4,8 @@
 
   <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>Ладожское озеро</title>
-    <meta name="keywords" content="Андрей Коперский, фотоальбом, Ладожское озеро, поход на байдарках, ">
+    <title>Ладога. Дорога Жизни</title>
+    <meta name="keywords" content="Андрей Коперский, фотоальбом, Ладога, Дорога жизни, байдарка, ">
     <link type="text/css" rel="stylesheet" href="stylesheets/screen_styles.css">
     <link type="text/css" media="screen" rel="stylesheet" href="stylesheets/colorbox.css">
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -22,13 +22,13 @@
 		  </script>
     <script type="text/javascript" src="scripts/jquery.colorbox.js"></script>
     <script type="text/javascript" src="arrays/ltocent2.js"></script>
-    <script type="text/JavaScript">window.pageid = "ladoga14.html";</script>
+    <script type="text/JavaScript">window.pageid = "ladoga15.html";</script>
     <link rel="Shortcut Icon" type="image/ico" href="images/favicon.ico">
   </head>
 
 
 
-  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="ladoga14">
+  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="ladoga15">
     <div id="container">
       <div id="branding">
         <h1>
@@ -89,25 +89,32 @@
       </div>
       <div id="content_main" class="with-info">
         <div id="breadcrumbs">
-          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Ладога 2014</strong>
+          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Ладога 2015</strong>
           </p>
         </div>
-        <h1 class="title topictitle1" id="ariaid-title1">Ладожское озеро</h1>
+        <h1 class="title topictitle1" id="ariaid-title1">Ладога. Дорога Жизни</h1>
         <div class="body photoBody">
-          <p class="shortdesc">Поход по Ладожскому озеру с 7 по 15 июня 2014 г. </p>
+          <p class="shortdesc">Ладога 2 - 8 мая 2015 г, 230 км.</p>
           <section class="section storySection">
-            <p class="p">Пройдено 222 км от Кузнечного на западном берегу до Олонца на восточном берегу.</p>
-            <center>
-              <iframe width="100%" height="300px" frameBorder="0" src="http://umap.openstreetmap.fr/en/map/ladoga_9375?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=false&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;datalayersControl=false&amp;onLoadPanel=undefined"></iframe>
-              <br>
-              <a target="_blank" href="http://umap.openstreetmap.fr/en/map/ladoga_9375">
-                Смотреть карту во весь экран</a>
-            </center></section></div>
+            <p class="p">Юбилейный  год Великой Победы вдохновил совершить  поход в память о той войне, ее жертвах и муках наших соотечественников. Это  и тяга к Ладоге указали путь, ставший символом преодоления и надежды, беды и    непокорности блокадного Ленинграда и названный   Дорогой Жизни. По ней я и прошел в конце похода.</p></section>
+          <section class="section storySection">
+            <div class="parallax js-module" data-module="Parallax" data-slowdown="true">
+              <div class="parallax--scroll-container">
+                <img class="parallax--bg-image" src="http://img-fotki.yandex.ru/get/2708/101174408.a/0_a9b00_3048478c_orig" style="bottom:0">
+              </div>
+              <a class="parallax--link" href="http://umap.openstreetmap.fr/ru/map/ladoga_35209" target="_blank">
+                <div class="parallax--content">
+                  <span class="parallax--shortdesc ">май 2015</span>
+                  <span class="parallax--title ">Ладога</span>
+                  <span class="parallax--note ">Дорога Жизни</span>
+                </div>
+              </a>
+            </div></section></div>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
                                 var disqus_shortname = "teux",
-                                    disqus_identifier = "ladoga14",
-                                    disqus_url = "http://www.teux.ru/ladoga14.html";
+                                    disqus_identifier = "ladoga15",
+                                    disqus_url = "http://www.teux.ru/ladoga15.html";
                                 (function() {
                                 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
                                 dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
@@ -120,13 +127,10 @@
         <ul id="quick_links"></ul>
         <h3>Language Links</h3>
         <ul id="inner_navigation">
-          <li class="first">
-            <strong>Вперед:</strong>
-            <a href="ladoga15.html">Ладога 2015</a>
-          </li>
+          <li class="first"><strong>Вперед:</strong>нет</li>
           <li>
             <strong>Назад:</strong>
-            <a href="ladoga.html">Ладога 2012</a>
+            <a href="ladoga14.html">Ладога 2014</a>
           </li>
           <li class="last">
             <strong>Вверх:</strong>
