--- a/river.html
+++ b/river.html
@@ -195,7 +195,11 @@
             <li class="link ulchildlink"><strong>
                 <a href="ladoga14.html">Ладожское озеро</a>
               </strong><br>
-Поход по Ладожскому озеру с 7 по 15 июня 2014 г. </li></ul></nav>
+Поход по Ладожскому озеру с 7 по 15 июня 2014 г. </li>
+            <li class="link ulchildlink"><strong>
+                <a href="ladoga15.html">Ладога. Дорога Жизни</a>
+              </strong><br>
+Ладога 2 - 8 мая 2015 г, 230 км.</li></ul></nav>
       </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
