--- a/rybachiy.html
+++ b/rybachiy.html
@@ -116,7 +116,7 @@
           <section class="section storySection">
             <div class="parallax js-module" data-module="Parallax" data-slowdown="true">
               <div class="parallax--scroll-container">
-                <img class="parallax--bg-image" src="http://img-fotki.yandex.ru/get/15558/101174408.a/0_a893d_74495c29_orig">
+                <img class="parallax--bg-image" src="http://img-fotki.yandex.ru/get/15558/101174408.a/0_a893d_74495c29_orig" style="bottom:0">
               </div>
               <a class="parallax--link" href="http://umap.openstreetmap.fr/en/map/rybachiy_25937" target="_blank">
                 <div class="parallax--content">
