--- a/rybachiy.html
+++ b/rybachiy.html
@@ -98,9 +98,9 @@
           <section class="section storySection">
             <h2 class="title sectiontitle">Общая информация</h2>
             <ul class="ul">
-              <li class="li">Конец июля, начало августа - "бархатный сезон".</li>
-              <li class="li">16 дней включая дорогу до Мурманска и обратно.</li>
-              <li class="li">150 км. </li>
+              <li class="li">С 31 июля по 16 августа. Выезд в пятницу 31 июля вечером.</li>
+              <li class="li">16 дней включая дорогу до Мурманска и обратно. 12 ходовых дней, 2 дневки.</li>
+              <li class="li">Маршрут 150 км. Средне в день 12.5 км. В действительности разовые переход могут быть до 15 км, дневные — до 30 км с отдыхом на следующий день.</li>
               <li class="li">Байдарки с емкостями непотопляемости (4.5 км/ч - крейсерская скорость).</li>
               <li class="li">Сложность средняя. Хотя бы у одного в экипаже желателен опыт походов по морю.</li>
               <li class="li">Опасность выше средней: холодное море, скалы, низкая плотность населения. Максимальная удаленность от берега - 500 м. </li>
