--- a/knp.html
+++ b/knp.html
@@ -183,7 +183,10 @@
             <strong>Вперед:</strong>
             <a href="skitul2009.html">Скитулец 2009</a>
           </li>
-          <li><strong>Назад:</strong>нет</li>
+          <li>
+            <strong>Назад:</strong>
+            <a href="wish.html">Желания</a>
+          </li>
           <li class="last">
             <strong>Вверх:</strong>
             <a href="camping.html">Прочие</a>
