--- a/wish.html
+++ b/wish.html
@@ -4,7 +4,7 @@
 
   <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>Прочие</title>
+    <title>Мои желания</title>
     <meta name="keywords" content="Андрей Коперский, фотоальбом, ">
     <link type="text/css" rel="stylesheet" href="stylesheets/screen_styles.css">
     <link type="text/css" media="screen" rel="stylesheet" href="stylesheets/colorbox.css">
@@ -22,13 +22,13 @@
 		  </script>
     <script type="text/javascript" src="scripts/jquery.colorbox.js"></script>
     <script type="text/javascript" src="arrays/ltocent7.js"></script>
-    <script type="text/JavaScript">window.pageid = "camping.html";</script>
+    <script type="text/JavaScript">window.pageid = "wish.html";</script>
     <link rel="Shortcut Icon" type="image/ico" href="images/favicon.ico">
   </head>
 
 
 
-  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="camping">
+  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="wish">
     <div id="container">
       <div id="branding">
         <h1>
@@ -89,45 +89,23 @@
       </div>
       <div id="content_main" class="with-info">
         <div id="breadcrumbs">
-          <p>
-            <span>Расположение: </span>
-            <strong>Прочие</strong>
+          <p><span>Расположение: </span><a href="camping.html">Прочие</a> &gt; <strong>Желания</strong>
           </p>
         </div>
-        <h1 class="title topictitle1" id="ariaid-title1">Прочие</h1>
-        <div class="body">
-          <p class="p">Отдых на одном месте</p></div>
-        <p class="toc">В этом разделе</p>
-        <nav role="navigation" class="related-links">
-          <ul class="ullinks">
-            <li class="link ulchildlink"><strong>
-                <a href="wish.html">Мои желания</a>
-              </strong><br>
-Заметки о том, где бы хотелось побывать</li>
-            <li class="link ulchildlink"><strong>
-                <a href="knp.html">Кенозерский парк</a>
-              </strong><br>
-Новый 2009 Год в Кенозерском национальном парке: морозно, свежо,   спокойно.</li>
-            <li class="link ulchildlink"><strong>
-                <a href="skitul2009.html">Скитулец 2009</a>
-              </strong><br>
-Ежегодный слет туристов-водников.</li>
-            <li class="link ulchildlink"><strong>
-                <a href="borki-liza.html">Лиза в Борках</a>
-              </strong><br>
-Покатушки на Як-18</li>
-            <li class="link ulchildlink"><strong>
-                <a href="ohvat.html">Отдых на озере Охват</a>
-              </strong><br>
-2009 с 11 по 14 июня. Отдых на живописном безрыбном озере   Охват</li>
-            <li class="link ulchildlink"><strong>
-                <a href="mossea09.html">Московское море</a>
-              </strong><br>
-12–13 сент. 2009 г. День рождения Михаила</li>
-            <li class="link ulchildlink"><strong>
-                <a href="evila.html">Тур по Европе</a>
-              </strong><br>
-Путешествие Валентины Сергеевны "Мечта всей жизни"</li></ul></nav>
+        <h1 class="title topictitle1" id="ariaid-title1">Мои желания</h1>
+        <div class="body photoBody" id="qwe">
+          <p class="shortdesc">Заметки о том, где бы хотелось побывать</p></div>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+                                var disqus_shortname = "teux",
+                                    disqus_identifier = "wish",
+                                    disqus_url = "http://www.teux.ru/wish.html";
+                                (function() {
+                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                })();
+                            </script>
       </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
@@ -136,13 +114,13 @@
         <ul id="inner_navigation">
           <li class="first">
             <strong>Вперед:</strong>
-            <a href="usefull.html">Полезности</a>
+            <a href="knp.html">Кенозерский парк</a>
           </li>
-          <li>
-            <strong>Назад:</strong>
-            <a href="auto.html">Автомобильные</a>
+          <li><strong>Назад:</strong>нет</li>
+          <li class="last">
+            <strong>Вверх:</strong>
+            <a href="camping.html">Прочие</a>
           </li>
-          <li class="last"><strong>Вверх:</strong>нет</li>
         </ul>
       </div>
     </div>
