--- a/kola.html
+++ b/kola.html
@@ -121,9 +121,9 @@
               </strong><br>
 Поход по Баренцеву морю на о. Кильдин с 4 по 10 августа 2014 г.</li>
             <li class="link ulchildlink"><strong>
-                <a href="rybachiy.html">Рыбачий (план)</a>
+                <a href="rybachiy.html">Рыбачий</a>
               </strong><br>
-Планируемый поход вокруг полуострова Рыбачий, Мурманская обл.</li></ul></nav>
+По Баренцеву морю вокруг п-ова Рыбачий</li></ul></nav>
       </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
