--- a/whitesea2010.html
+++ b/whitesea2010.html
@@ -225,7 +225,7 @@
     самурай просовывает ноги в манжеты неопреновых штанов. Непоколебимый дух чувствует слабую
     вибрацию, словно стрекоза пролетела между ним и солнцем и бросила маленькую тень. Самурай
     натягивает штаны на колени, понимая, как важен в предстоящей битве неопрен. Это успокаивает
-    дух и придает силы втиснуться в узкие доспехи.</p>            <div class="float-left">              <table>                <tbody>                  <tr>                    <td>                      <a href="http://img-fotki.yandex.ru/get/5808/teux.3/0_50a7c_7aed8e71_XL.jpg%22%20title=%22P1010041.JPG" rel="cbgroup" title="">                        <img class="imagecenter" src="http://img-fotki.yandex.ru/get/5808/teux.3/0_50a7c_7aed8e71_M.jpg%22%20title=%22P1010041.JPG">                      </a>                    </td>                  </tr>                </tbody>              </table>            </div>            <p class="p">Повысившимся голосом сёгун повелевает подать термофутболку и синтетическую жилетку, надевает. Ему
+    дух и придает силы втиснуться в узкие доспехи.</p>            <div class="float-left">              <table>                <tbody>                  <tr>                    <td>                      <a href="http://img-fotki.yandex.ru/get/5808/teux.3/0_50a7c_7aed8e71_XL.jpg" rel="cbgroup" title="">                        <img class="imagecenter" src="http://img-fotki.yandex.ru/get/5808/teux.3/0_50a7c_7aed8e71_M.jpg">                      </a>                    </td>                  </tr>                </tbody>              </table>            </div>            <p class="p">Повысившимся голосом сёгун повелевает подать термофутболку и синтетическую жилетку, надевает. Ему
     подносят боевой GPS-навигатор на шнурке. С уважением смотрит самурай на последний аргумент
     рукопашной схватки, разглядывает тонкие грани корпуса, любуется блестящим на солнце экраном,
     точным движением вешает навигатор на шею и отправляет в карман жилетки.</p>            <p class="p">Ногам должно быть тепло и мягко в момент главного удара, поэтому
@@ -428,7 +428,7 @@
     попрощаться. Его прощание было теплым и чуть церемониальным, но все же очень добрым. Мы
     трижды уходили, и трижды он возвращал нас, одаривая свежеиспеченным хлебом, соленой семгой,
     настойкой из разнотравья. "Теперь мне понравится" означало, что он создаст в наших глазах
-    образ, о котором ему самому будет приятно прочитать.</p>            <p class="p">Я возвращался в лагерь довольный собой. Как раз к моему приходу Саша закончил готовить 
+    образ, о котором ему самому будет приятно прочитать.</p>            <p class="p">Я возвращался в лагерь довольный собой. Как раз к моему приходу Саша закончил готовить
     ужин. "Ты ждал в кустах, пока я приготовлю?" — усмехнулся он. Его тоже распирало от
     гордости, и было с чего. Целая тарелка отличных блинов была лишь началом. К ней прилагалась
     тарелка мясного фарша c обжаренным луком, а на десерт ждал блинный торт со сгущенкой.
