--- a/skybonds/index.html
+++ b/skybonds/index.html
@@ -1,7 +1,12 @@
 <html>
 <head></head>
 <body>
-  <code><pre id="code"></pre><code>
+  <div>
+    <a href="https://gist.github.com/teux/2a5e5fb5ae03d095db31d57c7d2e5f71" target="_blank">Код на github gists</a>
+  </div>
+  <div>
+    Пример вызова  <a href="/skybonds?size=5000000&accuracy=5">skybonds?size=5000000&accuracy=5</a>
+  </div>
   <pre id="result"></pre>
   <script src="fraction.js"></script>
 </body>
